# monash-research-tone-bias

./: .gitignore  README.md  clean_heet_dataset.py  emotion2vec.py  gemini_response_pipeline.py  heet_dataset_clean.csv  heet_dataset_new_negative_clean.csv  pyproject.toml
manifests/: manifest_iemocap_hf.csv
src/: gemini_response_pipeline.py
src/cleaners/: clean_heet_dataset.py  clean_hybrid_negative_dataset.py  extract_deepdialogue_xtts_cleaned.py  extract_emovoice_cleaned.py  extract_iemocap_human_cleaned.py  extract_iemocap_synth_cleaned.py  extract_styletalk_cleaned.py  extract_tess_human_cleaned.py  extract_tess_indextts_cleaned.py
src/evaluators/: compare_heet_ground_truth.py  eiv_all_emotions.py  eiv_summary_table.py  emotion2vec_all_emotions.py  emotion2vec_summary_table.py
src/inference/: emotion2vec.py  empathic_insight_voice_all36_kaggle.py
src/manifest_loaders/: README.md  load_deepdialogue_manifest.py  load_iemocap_human_manifest.py
